# mem0Chatbot

./: .gitignore  CHROMADB_DELETE_MECHANISM.md  DATABASE_CHECK_REPORT.md  FIXES_SUMMARY.md  FRONTEND_MEMORY_GUIDE.md  GOOGLE_GEMINI_FIX_LOG.md  HYBRID_VECTOR_DB_ARCHITECTURE.md  MEM0_DEPENDENCY_ANALYSIS.md  MEM0_KNOWLEDGE_EXTRACTION_GUIDE.md  MEM0_VECTOR_DB_CRUD_GUIDE.md  MEMORY_FIX_LOG.md  PHASE4_COMPLETION_REPORT.md  PHASE5_COMPLETION_REPORT.md  PHASE5_FINAL_SUMMARY.md  PHASE5_QUICK_REFERENCE.md  PHASE6_COMPLETION_REPORT.md  PROJECT_TUTORIAL.md  PROMPT.txt  SPECKIT_IMPLEMENTATION_SUMMARY.md  TESTING_GUIDE.md  US2_COMPLETION_REPORT.md  VECTOR_DB_DELETION_AND_NEWS_MANAGEMENT.md  check_conversations.py  check_mem0.py  check_raw_data.py  test_fix.py  test_memory_fix.py  verify_db.py
.claude/: settings.local.json
backend/: .env.example  check_chroma_struct.py  check_db.py  pyproject.toml  requirements.txt
backend/src/: main.py
backend/src/config/: __init__.py  settings.py
backend/src/models/: conversation.py
backend/src/services/: conversation_service.py  embedding_service.py  llm_service.py  memory_service.py
backend/src/storage/: __init__.py  database.py  schema.sql  storage_service.py
backend/src/utils/: __init__.py  exceptions.py  logger.py
backend/tests/: conftest.py
backend/tests/api/: test_chat_endpoints.py  test_health_endpoints.py  test_memory_endpoints.py
backend/tests/integration/: test_chat_flow.py  test_memory_crud.py  test_memory_retrieval.py
backend/tests/unit/: test_memory_service.py  test_memory_service_search.py  test_storage_service.py
(+28 files in other folders)
